@@ -1,3 +1,8 @@
+2004-05-17  Bruno Haible  <bruno@clisp.org>
+
+	* lispbibl.d: Rewrite a preprocessor expression, to avoid a gcc
+	warning.
+
 2004-05-17  Sam Steingold  <sds@gnu.org>
 
 	* condition.lisp: add package prefix in the WITHOUT-PACKAGE-LOCK form
